--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
   },
   "require": {
     "atk4/data": "2.4.*",
-    "philippgrashoff/traitsforatkdata": "dev-master",
-    "philippgrashoff/tokenforatk": "dev-main",
-    "philippgrashoff/secondarymodelforatk": "dev-master"
+    "atk4/login": "2.4.*",
+    "philippgrashoff/traitsforatkdata": "2.4.*",
+    "philippgrashoff/tokenforatk": "2.4.*",
+    "philippgrashoff/secondarymodelforatk": "2.4.*"
   },
   "require-dev": {
     "phpunit/phpunit": ">8"
